--- a/css_sheet/learn.css
+++ b/css_sheet/learn.css
@@ -1,3 +1,43 @@
+h1 {
+    font-size: 45px;
+}
+
 body {
-    margin: 0;
+    background-image: url("https://www.jetbrains.com/decompiler/img/dot-peek-beam.svg");
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
+/*大格子*/
+.flex {
+    display: flex;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.flex:hover {
+    transition: all .5s;
+    background-color: white;
+}
+
+/*右格子*/
+.yougezi {
+    width: 100%;
+}
+
+/*小格子*/
+.name {
+    width: 100%;
+    height: 20%;
+}
+
+.rec {
+    width: 100%;
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: rgba(128, 128, 128, 0.15);
+}
+
+/*加粗字体专用*/
+.jiacu {
+    font-weight: bolder;
 }
