--- a/css_sheet/learn.css
+++ b/css_sheet/learn.css
@@ -3,7 +3,7 @@ h1 {
 }
 
 body {
-    background-image: url("https://www.jetbrains.com/decompiler/img/dot-peek-beam.svg");
+    background-image: url("../images/dotpeek.svg");
     background-position: top;
     background-repeat: no-repeat;
 }
@@ -12,6 +12,10 @@ body {
 .flex {
     display: flex;
     background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid black;
+    border-radius: 15px;
+    margin: 5px 5px 5px 5px;
+    padding: 6px 6px 6px 6px;
 }
 
 .flex:hover {
@@ -30,14 +34,41 @@ body {
     height: 20%;
 }
 
+/*建议*/
 .rec {
     width: 100%;
     border-radius: 10px;
     border: 1px solid black;
     background-color: rgba(128, 128, 128, 0.15);
+    padding: 2px 0 2px 3px;
 }
 
 /*加粗字体专用*/
 .jiacu {
     font-weight: bolder;
+}
+
+/*下一节*/
+.next {
+    color: white;
+    border-radius: 15px;
+    background-color: black;
+    width: 10%;
+    height: 50px;
+    margin: 0 auto 5px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.next:hover {
+    background-color: white;
+    color: black;
+    transition: all .5s;
+}
+
+a:link {
+    color: white;
+    text-decoration: none;
 }
