--- a/css_sheet/myinfor.css
+++ b/css_sheet/myinfor.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("https://www.jetbrains.com/resharper-cpp/img/beam-1.svg");
+    background-image: url("../images/resharp.svg");
     background-position: top;
     background-repeat: no-repeat;
     min-height: 100vh;
