--- a/css_sheet/afclass.css
+++ b/css_sheet/afclass.css
@@ -30,6 +30,7 @@ body {
 .book:hover {
     background-color: rgba(0, 0, 0, 0.5);
     color: white;
+    transition: all .5s;
 }
 
 /*按钮*/
@@ -55,4 +56,30 @@ body {
 
 a:link {
     text-decoration: none;
+    color: black;
+}
+
+a:hover {
+    color: white;
+}
+
+a:visited {
+    color: white;
+}
+
+.go {
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    height: 50px;
+    width: 10%;
+    margin: 10px auto 10px auto;
+    border-radius: 15px;
+}
+
+.go:hover {
+    background-color: #2b2b2c;
+    transition: all .5s;
 }
