--- a/css_sheet/junjie.css
+++ b/css_sheet/junjie.css
@@ -1,24 +1,17 @@
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(0, 0, 0);
-    background-image: url("../images/abbg.jpeg");
-    background-size: cover;
+    background-image: url("../images/dataspell.svg");
     background-repeat: no-repeat;
-    min-height: 100vh;
+    background-position: top;
+
 }
 
-/*最大地包含器具*/
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 400px;
-    background-color: rgba(255, 255, 255, 0.8);
+    height: 650px;
     opacity: 0;
     animation: 1.5s last ease-in-out forwards;
     animation-iteration-count: 1;
@@ -30,7 +23,11 @@ body {
     }
 }
 
-/*包含三个元素地格子*/
+.yiji {
+    font-size: 60px;
+    font-weight: bold;
+}
+
 .gezi {
     display: flex;
     border-radius: 15px;
@@ -56,11 +53,6 @@ body {
     transition: all .5s;
 }
 
-/*一级大小文字*/
-.yiji {
-    font-size: 70px;
-    font-weight: bolder;
-}
 
 a {
     text-decoration: none;
