--- a/css_sheet/food.css
+++ b/css_sheet/food.css
@@ -1,5 +1,22 @@
+.align {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+}
+
 body {
-    background-image: url("../images/dataspell.svg");
-    background-repeat: no-repeat;
-    background-position: top;
+    background-image: none;
+    margin: 10px auto 10px auto;
+    width: 65%;
+    border-radius: 15px;
+    border: 2px solid black;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #f3f3f4;
+}
+
+p {
+    font-size: 18px;
+    border: none;
+    background: none;
 }
