--- a/css_sheet/myinfor.css
+++ b/css_sheet/myinfor.css
@@ -48,7 +48,7 @@ span {
     margin: 5px;
     background-color: rgba(255, 255, 255, 0.8);
     width: 45%;
-    height: 300px;
+    height: 350px;
 }
 
 .xiaogezi:hover {
@@ -82,7 +82,7 @@ span {
 
 a:link {
     text-decoration: none;
-    color: grey;
+    color: white;
 }
 
 a:hover {
@@ -108,4 +108,9 @@ a:hover {
     to {
         opacity: 1;
     }
+}
+
+.hei {
+    text-decoration: none;
+    font-size: initial;
 }
